# evidence-integration-c

./: .gitignore  README.md  portforward.sh  reporter-config.json
.github/workflows/: ai-translate-ci.yml  create-application-version.yml  create-jira-evidence.yml  end2end-tests.yml  promote-application-version.yml  quoteofday-ci.yml  quotopia-ui-ci.yml  release-application-version.yml
argocd/manifests/: cluster-role-permissions.yaml  deployment-ai-translate.yaml.cencelled  deployment-quoteofday.yaml  deployment-quotopia-ui.yaml  job-post-sync-evidence.yaml  quotopia-default-service-acount-grant-cluster-role.yaml  service-ai-translate.yaml.cencelled  service-quoteofday.yaml  service-quotopia-ui.yaml
e2e-tests/: E2E_CI_INTEGRATION.md  README.md  clean-reports.sh  cypress.config.js  docker-compose.local.yml  docker-compose.yml.template  generate-test-report.js  package-lock.json  package.json  run-cypress.sh  start-ui-service.sh  test-report.md  test-workflow.sh
e2e-tests/cypress/e2e/: end-to-end-quotopia.cy.js  quote-service.cy.js
e2e-tests/cypress/support/: commands.js  e2e.js
jira/: .gitignore  README.md
jira/helper/: Makefile  README.md  build.sh  config.go  config_test.go  errors.go  errors_test.go  git.go  git_test.go  go.mod  go.sum  integration_test.go  jira_client.go  jira_client_test.go  jira_models.go  jira_test.go  jira_utils.go  main.go  main_test.go  markdown_generator.go  markdown_generator_test.go  modes.go  modes_test.go  run_integration_tests.sh  utils.go  utils_test.go
quoteofday/: Dockerfile  README.md  pom.xml  test-evidence.md
quoteofday/.jfrog/projects/: maven.yaml
quoteofday/gradle/: gradle-build-tool.md  gradle-evidence.sh  gradle-java-toolchain.md  gradle-resolved-dependencies.md
quoteofday/scripts/: argo-evidence.sh  argocd.md  convert-test-reports.sh
quoteofday/src/main/java/com/example/quotefday/: QuoteOfDayApplication.java
quoteofday/src/main/java/com/example/quotefday/config/: OpenAPIConfig.java
quoteofday/src/main/java/com/example/quotefday/controller/: QuoteController.java
quoteofday/src/main/java/com/example/quotefday/model/: Quote.java
quoteofday/src/main/java/com/example/quotefday/service/: QuoteService.java
quoteofday/src/main/resources/: application-security.properties
quoteofday/src/test/java/com/example/quotefday/: QuoteOfDayApplicationTests.java
quoteofday/src/test/java/com/example/quotefday/controller/: QuoteControllerTest.java
quoteofday/src/test/java/com/example/quotefday/service/: QuoteServiceTest.java
quotopia-ui/: .dockerignore  Dockerfile  README.md  index.html  script.js  styles.css
src/main/resources/: application.properties
translate/: .dockerignore  BUILD_OPTIMIZATION.md  DISK_SPACE_OPTIMIZATION.md  Dockerfile  OPTIMIZATION_CHANGES.md  OPTIMIZATION_SUMMARY.md  README.md  __init__.py  analyze-dependencies.py  app.py  build-optimized.sh  build.sh  pyproject.toml  requirements-dev.txt  requirements-optimized.txt  requirements.txt  security_config.py  setup.py  simple_app.py  start.sh  test-artifactory.sh  test_service.py  translation_service.py  verify-env.sh
translate/tests/: __init__.py  test_translation.py
